--- a/HandCuffedExplode/HandCuffedExplode.csproj
+++ b/HandCuffedExplode/HandCuffedExplode.csproj
@@ -50,7 +50,8 @@
     <Reference Include="EXILED_Permissions">
       <HintPath>..\..\.Smod MP2.PreAlpha &amp; Exiled\Exiled\Plugins\EXILED_Permissions.dll</HintPath>
     </Reference>
-    <Reference Include="ExplodeBullets">
+    <Reference Include="ExplodeBullets, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\ExplodeBullets\ExplodeBullets\bin\Debug\ExplodeBullets.dll</HintPath>
     </Reference>
     <Reference Include="Mirror, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
@@ -58,13 +59,9 @@
       <HintPath>..\..\.Smod MP2.PreAlpha &amp; Exiled\Managed\Mirror.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\.Smod MP2.PreAlpha &amp; Exiled\Managed\UnityEngine.dll</HintPath>
